tests/tooling/fixtures/native/recovery/negative/negative_loop_control_parser_missing_while_paren.objc3
// Negative fixture: malformed while statement missing '('.
// Expected diagnostic code(s): O3P106.
module NegativeLoopControlParserMissingWhileParen;

fn main() -> i32 {
  while ) ;
  return 0;
}
